tests/ui/associated-type-bounds/overlaping-bound-suggestion.stderr
error[E0191]: the value of the associated types `Item`, `Item`, `IntoIter` and `IntoIter` in `IntoIterator` must be specified
  --> $DIR/overlaping-bound-suggestion.rs:7:13
   |
LL |     inner: <IntoIterator<Item: IntoIterator<Item: >>::IntoIterator as Item>::Core,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |                  |
   |             |                  associated types `Item`, `IntoIter` must be specified
   |             associated types `Item`, `IntoIter` must be specified

error[E0223]: ambiguous associated type
  --> $DIR/overlaping-bound-suggestion.rs:7:13
   |
LL |     inner: <IntoIterator<Item: IntoIterator<Item: >>::IntoIterator as Item>::Core,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: if there were a trait named `Example` with associated type `IntoIterator` implemented for `(dyn IntoIterator + 'static)`, you could use the fully-qualified path
   |
LL |     inner: <<(dyn IntoIterator + 'static) as Example>::IntoIterator as Item>::Core,
   |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0191, E0223.
For more information about an error, try `rustc --explain E0191`.
